# bybit-bot

./: .gitignore
bybit_ai_trader/: .env  .env.example  .pre-commit-config.yaml  ADVANCED_FEATURES.md  README.md  README_CONFIG.md  bybit_trader.sh  install.sh  main.py  pyproject.toml  requirements.txt
bybit_ai_trader/config/: settings.yaml
bybit_ai_trader/core/: __init__.py  config.py  constants.py  logger.py
bybit_ai_trader/dashboard/: __init__.py  terminal.py
bybit_ai_trader/database/: __init__.py  manager.py
bybit_ai_trader/exchange/: __init__.py  bybit_client.py
bybit_ai_trader/execution/: scale_manager.py
bybit_ai_trader/position/: __init__.py  manager.py
bybit_ai_trader/risk/: __init__.py  advanced_manager.py  manager.py
bybit_ai_trader/scanner/: __init__.py  market_scanner.py
bybit_ai_trader/strategy/: strategies.py
bybit_ai_trader/tests/: test_config.py  test_database.py
